# clatter

./: .gitignore  LICENSE.md  README.md  build.md  changelog.md
Clatter/: Clatter.sln  build_py.run.xml
Clatter/Clatter.Benchmark/: Clatter.Benchmark.csproj  Program.cs
Clatter/Clatter.CommandLine/: ArgumentParser.cs  Clatter.CommandLine.csproj  Program.cs  build_all.run.xml  doc_gen.run.xml  linux.run.xml  linux64.run.xml  osx64.run.xml  upload_py.run.xml  win64.run.xml
Clatter/Clatter.Core/: AudioEvent.cs  AudioEventType.cs  AudioGenerator.cs  AudioGeneratorTimeoutException.cs  AudioObjectData.cs  Clatter.Core.csproj  ClatterObjectData.cs  CollisionEvent.cs  Creator.cs  DoubleExtensions.cs  EventState.cs  ExternalEntryPoint.cs  Globals.cs  Impact.cs  ImpactMaterial.cs  ImpactMaterialData.cs  ImpactMaterialSized.cs  ImpactMaterialUnsized.cs  LinSpace.cs  Loader.cs  MedianFilter.cs  Modes.cs  NativeBindings.cs  NormalDistribution.cs  OnCollisionType.cs  Paths.cs  PhysicsValues.cs  Samples.cs  Scrape.cs  ScrapeMaterial.cs  ScrapeMaterialData.cs  ShortExtensions.cs  Util.cs  Vector3d.cs  WavWriter.cs
Clatter/Clatter.ImpactBenchmark/: Program.cs
Clatter/Clatter.ImpactTest/: Clatter.ImpactTest.csproj  Program.cs
Clatter/Clatter.ScrapeBenchmark/: Program.cs
ClatterUnityExamples/: Assembly-CSharp.csproj  ClatterUnityExamples.sln
clatter_rs/: Cargo.toml  build.ps1
clatter_rs/src/: lib.rs
docs/: Doxyfile  benchmark.md  benchmark.txt  clatter.core.md  clatter.unity.md  cli.md  doc_gen.py  html_prefix.txt  overview.md  scratch.py  sidebar.py
upload/: upload.py
(+105 files in other folders)
